--- a/templates/default.html
+++ b/templates/default.html
@@ -4,19 +4,19 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
     <head>
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-        <title>My Hakyll Blog - $title$</title>
+        <title>Book Reviews - $title$</title>
         <link rel="stylesheet" type="text/css" href="/css/default.css" />
     </head>
     <body>
         <div id="header">
             <div id="logo">
-                <a href="/">My Hakyll Blog</a>
+                <a href="./">Book Reviews</a>
             </div>
             <div id="navigation">
-                <a href="./">Home</a>
-                <a href="./about.html">About</a>
-                <a href="./contact.html">Contact</a>
-                <a href="./archive.html">Archive</a>
+                <a href="/reviews">Home</a>
+                <a href="/reviews/about.html">About</a>
+                <a href="/reviews/contact.html">Contact</a>
+                <a href="/reviews/archive.html">Archive</a>
             </div>
         </div>
 
