tidied up links

--- a/templates/default.html
+++ b/templates/default.html
@@ -10,13 +10,13 @@
     <body>
         <div id="header">
             <div id="logo">
-                <a href="./">Book Reviews</a>
+                <a href="/">Book Reviews</a>
             </div>
             <div id="navigation">
-                <a href="/reviews">Home</a>
-                <a href="/reviews/about.html">About</a>
-                <a href="/reviews/contact.html">Contact</a>
-                <a href="/reviews/archive.html">Archive</a>
+                <a href="/">Home</a>
+                <a href="/about.html">About</a>
+                <a href="/contact.html">Contact</a>
+                <a href="/archive.html">Archive</a>
             </div>
         </div>
 
