Baru Comorant review

--- a/templates/post.html
+++ b/templates/post.html
@@ -6,3 +6,10 @@
 </div>
 
 $body$
+<div> Rating:
+$if(liked)$
+    <img src="/images/thumbsup.png" height=26px>
+$else$
+    No rating given
+$endif$
+</div>
