image moved to attribute

--- a/templates/post.html
+++ b/templates/post.html
@@ -7,6 +7,7 @@
         $endif$
     $endif$
 </div>
+<img src="/images/$image$" style="float: right; margin: 10px; width:200px;" />
 $body$
 <div> Rating:
 $if(liked)$
