more feeds, smaller thumbsup to remove cache

--- a/templates/post.html
+++ b/templates/post.html
@@ -11,7 +11,7 @@
 $body$
 <div> Rating:
 $if(liked)$
-    <img src="/images/thumbsup.png" height=26px>
+    <img src="/images/thumbsup_s.png" height=26px>
 $else$
     No rating given
 $endif$
