--- a/templates/default.html
+++ b/templates/default.html
@@ -17,6 +17,7 @@
                 <a href="/about.html">About</a>
                 <a href="/contact.html">Contact</a>
                 <a href="/archive.html">Archive</a>
+                <a href="/review_rss.xml">RSS Feed</a>
             </div>
         </div>
 
